crates/ruff/src/rules/flake8_tidy_imports/snapshots/ruff__rules__flake8_tidy_imports__relative_imports__tests__TID253__nested__init.snap
---
source: crates/ruff/src/rules/flake8_tidy_imports/relative_imports.rs
---
__init__.py:12:1: TID253 [*] Relative imports for sibling modules are required
   |
12 | # TID253
13 | from TID253.nested import _
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID253
14 | from TID253.nested.module import _
   |
   = help: Replace absolute sibling imports with relative imports

ℹ Suggested fix
9  9  | from TID253.module import _
10 10 | 
11 11 | # TID253
12    |-from TID253.nested import _
   12 |+from . import _
13 13 | from TID253.nested.module import _

__init__.py:13:1: TID253 [*] Relative imports for sibling modules are required
   |
13 | # TID253
14 | from TID253.nested import _
15 | from TID253.nested.module import _
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID253
   |
   = help: Replace absolute sibling imports with relative imports

ℹ Suggested fix
10 10 | 
11 11 | # TID253
12 12 | from TID253.nested import _
13    |-from TID253.nested.module import _
   13 |+from .module import _


